--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="dist/css/all.css">
   <title>Pomodoro</title>
+  <script></script>
 </head>
 <body>
   <div id="menu">
@@ -20,9 +21,9 @@
     </div>
   </div>
   <div id="controls">
-    <a class="btn btn-full">START</a>
-    <!--<a class="btn">STOP</a>-->
-    <!--<a class="btn">RESUME</a>-->
+    <a class="btn btn-full" id="start_timer">START</a>
+    <!--<a class="btn" id="stop_timer">STOP</a>-->
+    <!--<a class="btn" id="resume_timer">RESUME</a>-->
     <div class="clearfix"></div>
   </div>
   <div id="result">
@@ -38,5 +39,6 @@
     <div class="item"></div>
     <div class="item"></div>
   </div>
+  <script src="dist/js/all.js"></script>
 </body>
 </html>
