stop, pause, resume timer

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
   </div>
   <div id="controls">
     <a class="btn btn-full" id="start_timer">START</a>
-    <!--<a class="btn" id="stop_timer">STOP</a>-->
-    <!--<a class="btn" id="resume_timer">RESUME</a>-->
+    <a class="btn btn-full" id="pause_timer">PAUSE</a>
+    <a class="btn" id="stop_timer">STOP</a>
+    <a class="btn" id="resume_timer">RESUME</a>
     <div class="clearfix"></div>
   </div>
   <div id="result">
