1. convert to electron 2. set badge and notify

--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
     <div class="item"></div>
     <div class="item"></div>
   </div>
+  <script src="load.js"></script>
+  <script>
+    if (typeof module === 'object') { window.module = module; module = undefined; }
+  </script>
   <script src="dist/js/all.js"></script>
+  <script>
+    if (window.module) module = window.module;
+  </script>
+  
 </body>
 </html>
