--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <div id="menu">
     <div class="insider">
       POMODORO #<span class="num">1</span>
-      <a id="setting"><i class="fa fa-cog" aria-hidden="true"></i></a>
+      <!--<a id="setting"><i class="fa fa-cog" aria-hidden="true"></i></a>-->
     </div>
   </div>
   <div id="timer">
     <div class="insider">
-      25:00
+      1:00
     </div>
   </div>
   <div id="controls">
@@ -25,6 +25,7 @@
     <a class="btn btn-full" id="pause_timer">PAUSE</a>
     <a class="btn" id="stop_timer">STOP</a>
     <a class="btn" id="resume_timer">RESUME</a>
+    <a class="btn btn-full" id="takebreak_btn">TAKE BREAK <span class="sleep_min">5</span> MINUTEs</a>
     <div class="clearfix"></div>
   </div>
   <div id="result">
